--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   apply-dev:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+
     environment: dev
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
